src/objects/applogs__x.object
<CustomObject>
    <description>applogs</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>public$applogs</externalName>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>level__c</fullName>
        <description>level</description>
        <externalDeveloperName>level</externalDeveloperName>
        <label>level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>meta__c</fullName>
        <description>meta</description>
        <externalDeveloperName>meta</externalDeveloperName>
        <label>meta</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>msg__c</fullName>
        <description>msg</description>
        <externalDeveloperName>msg</externalDeveloperName>
        <label>msg</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>reqkey__c</fullName>
        <description>reqkey</description>
        <externalDeveloperName>reqkey</externalDeveloperName>
        <label>reqkey</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>time__c</fullName>
        <description>time</description>
        <externalDeveloperName>time</externalDeveloperName>
        <label>time</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <label>applogs</label>
    <pluralLabel>applogs</pluralLabel>
</CustomObject>